--- a/p2/web-apps/app1/app1.yaml
+++ b/p2/web-apps/app1/app1.yaml
@@ -1,23 +1,22 @@
-
 apiVersion: apps/v1
 kind: Deployment
-metadata:
+metadata: #FOR DEPLOYMENT
   name: app1
 spec:
   replicas: 1
   selector:
     matchLabels:
       app: app1
-  template:
-    metadata:
+  template: #DETAILS OF POD
+    metadata: #FOR PODS
       labels:
         app: app1
     spec:
       containers:
       - name: app1
-        image: aramirol/tictactoe
+        image: nginx
         ports:
-        - containerPort: 8080
+        - containerPort: 80
 ---
 apiVersion: v1
 kind: Service
@@ -29,5 +28,5 @@ spec:
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 8080
+      targetPort: 80
   type: ClusterIP
