--- a/p2/web-apps/app2/app2.yaml
+++ b/p2/web-apps/app2/app2.yaml
@@ -1,4 +1,3 @@
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -15,19 +14,19 @@ spec:
     spec:
       containers:
       - name: app2
-        image: hariprasath66/rock-paper-scissors-game
+        image: nginx
         ports:
         - containerPort: 80
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name:app2-service
+  name: app2-service
 spec:
   selector:
-    app:app2
+    app: app2
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 4000
+      targetPort: 80
   type: ClusterIP
