--- a/p2/web-apps/app3/app3.yaml
+++ b/p2/web-apps/app3/app3.yaml
@@ -1,4 +1,3 @@
-
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -15,7 +14,7 @@ spec:
     spec:
       containers:
       - name: app3
-        image: alexwhen/docker-2048
+        image: nginx
         ports:
         - containerPort: 80
 ---
@@ -29,5 +28,5 @@ spec:
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 4000
+      targetPort: 80
   type: ClusterIP
